--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "description": "京东企微scrm",
   "templateInfo": {
     "name": "default",
-    "typescript": true,
-    "css": "sass"
+    "typescript": false,
+    "css": "Sass",
+    "framework": "React"
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
+    "build:weapp.q1": "taro build --type weapp --mode q1",
+    "build:weapp.tp": "taro build --type weapp --mode tp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
     "build:tt": "taro build --type tt",
@@ -18,7 +21,10 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
+    "build:harmony-hybrid": "taro build --type harmony-hybrid",
     "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:weapp.q1": "npm run build:weapp -- --watch --mode q1",
+    "dev:weapp.tp": "npm run build:weapp -- --watch --mode tp",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -26,7 +32,9 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch",
+    "test": "jest"
   },
   "browserslist": [
     "last 3 versions",
@@ -35,43 +43,51 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.5.12",
-    "@tarojs/helper": "3.5.12",
-    "@tarojs/plugin-platform-weapp": "3.5.12",
-    "@tarojs/plugin-platform-alipay": "3.5.12",
-    "@tarojs/plugin-platform-tt": "3.5.12",
-    "@tarojs/plugin-platform-swan": "3.5.12",
-    "@tarojs/plugin-platform-jd": "3.5.12",
-    "@tarojs/plugin-platform-qq": "3.5.12",
-    "@tarojs/router": "3.5.12",
-    "@tarojs/runtime": "3.5.12",
-    "@tarojs/shared": "3.5.12",
-    "@tarojs/taro": "3.5.12",
-    "@tarojs/taro-h5": "3.5.12",
-    "@tarojs/plugin-framework-react": "3.5.12",
-    "@tarojs/react": "3.5.12",
+    "@babel/runtime": "^7.21.5",
+    "@ezr/pebble": "^2.10.4",
+    "@tarojs/components": "3.6.32",
+    "@tarojs/helper": "3.6.32",
+    "@tarojs/plugin-framework-react": "3.6.32",
+    "@tarojs/plugin-platform-alipay": "3.6.32",
+    "@tarojs/plugin-platform-h5": "3.6.32",
+    "@tarojs/plugin-platform-harmony-hybrid": "3.6.32",
+    "@tarojs/plugin-platform-jd": "3.6.32",
+    "@tarojs/plugin-platform-qq": "3.6.32",
+    "@tarojs/plugin-platform-swan": "3.6.32",
+    "@tarojs/plugin-platform-tt": "3.6.32",
+    "@tarojs/plugin-platform-weapp": "3.6.32",
+    "@tarojs/react": "3.6.32",
+    "@tarojs/runtime": "3.6.32",
+    "@tarojs/shared": "3.6.32",
+    "@tarojs/taro": "3.6.32",
+    "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.5.12",
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^18.0.0",
-    "webpack": "5.69.0",
-    "@tarojs/webpack5-runner": "3.5.12",
-    "babel-preset-taro": "3.5.12",
-    "eslint-config-taro": "3.5.12",
-    "eslint": "^8.12.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
-    "eslint-plugin-react": "^7.8.2",
+    "@tarojs/cli": "3.6.32",
+    "@tarojs/taro-loader": "3.6.32",
+    "@tarojs/test-utils-react": "^0.1.1",
+    "@tarojs/webpack5-runner": "3.6.32",
+    "@types/jest": "^29.3.1",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.0",
+    "@types/webpack-env": "^1.13.6",
+    "babel-preset-taro": "3.6.32",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.6.32",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.18",
+    "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "ts-node": "^10.9.1",
+    "webpack": "5.78.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
