--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "EZR.FE.JdCrmMulti.Mini",
+  "projectname": "taro-demo",
   "description": "京东企微scrm",
   "appid": "touristappid",
   "setting": {
