--- a/src/ext.weapp.json
+++ b/src/ext.weapp.json
@@ -1,9 +1,9 @@
 {
-  "extAppid": "wx16e8b11f0b15b398",
+  "extAppid": "wx0540cca36c22cc9e",
   "extEnable": true,
   "recompile":true,
   "ext": {
-    "appId": "wx16e8b11f0b15b398",
+    "appId": "wx0540cca36c22cc9e",
     "custom_config": {
       "sgname": "店长",
       "brandid": 739
