--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"framework": "React"
 	},
 	"scripts": {
-		"build:weapp": "taro build --type weapp --mode tp",
-		"build:weapp.q1": "taro build --type weapp --mode q1",
-		"build:weapp.tp": "taro build --type weapp --mode tp",
+		"build:weapp": "taro build --type weapp",
 		"build:swan": "taro build --type swan",
 		"build:alipay": "taro build --type alipay",
 		"build:tt": "taro build --type tt",
@@ -22,7 +20,7 @@
 		"build:jd": "taro build --type jd",
 		"build:quickapp": "taro build --type quickapp",
 		"build:harmony-hybrid": "taro build --type harmony-hybrid",
-		"dev:weapp": "npm run build:weapp.q1 -- --watch",
+		"dev:weapp": "npm run build:weapp -- --watch",
 		"dev:swan": "npm run build:swan -- --watch",
 		"dev:alipay": "npm run build:alipay -- --watch",
 		"dev:tt": "npm run build:tt -- --watch",
