--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-	"name": "EZR.FE.JdCrmMulti.Mini",
+	"name": "testtaro3.5",
 	"version": "1.0.0",
 	"private": true,
-	"description": "京东企微scrm",
+	"description": "",
 	"templateInfo": {
 		"name": "default",
 		"typescript": false,
-		"css": "Sass",
-		"framework": "React"
+		"css": "sass"
 	},
 	"scripts": {
 		"build:weapp": "taro build --type weapp",
@@ -19,7 +18,6 @@
 		"build:qq": "taro build --type qq",
 		"build:jd": "taro build --type jd",
 		"build:quickapp": "taro build --type quickapp",
-		"build:harmony-hybrid": "taro build --type harmony-hybrid",
 		"dev:weapp": "npm run build:weapp -- --watch",
 		"dev:swan": "npm run build:swan -- --watch",
 		"dev:alipay": "npm run build:alipay -- --watch",
@@ -28,9 +26,7 @@
 		"dev:rn": "npm run build:rn -- --watch",
 		"dev:qq": "npm run build:qq -- --watch",
 		"dev:jd": "npm run build:jd -- --watch",
-		"dev:quickapp": "npm run build:quickapp -- --watch",
-		"dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch",
-		"test": "jest"
+		"dev:quickapp": "npm run build:quickapp -- --watch"
 	},
 	"browserslist": [
 		"last 3 versions",
@@ -39,23 +35,24 @@
 	],
 	"author": "",
 	"dependencies": {
-		"@babel/runtime": "^7.21.5",
+		"@babel/runtime": "^7.7.7",
 		"@ezr/pebble": "^2.10.4",
-		"@tarojs/components": "3.6.34",
-		"@tarojs/helper": "3.6.34",
-		"@tarojs/plugin-framework-react": "3.6.34",
-		"@tarojs/plugin-platform-alipay": "3.6.34",
-		"@tarojs/plugin-platform-h5": "3.6.34",
-		"@tarojs/plugin-platform-harmony-hybrid": "3.6.32",
-		"@tarojs/plugin-platform-jd": "3.6.34",
-		"@tarojs/plugin-platform-qq": "3.6.34",
-		"@tarojs/plugin-platform-swan": "3.6.34",
-		"@tarojs/plugin-platform-tt": "3.6.34",
-		"@tarojs/plugin-platform-weapp": "3.6.34",
-		"@tarojs/react": "3.6.34",
-		"@tarojs/runtime": "3.6.34",
-		"@tarojs/shared": "3.6.34",
-		"@tarojs/taro": "3.6.34",
+		"@tarojs/components": "3.5.12",
+		"@tarojs/helper": "3.5.12",
+		"@tarojs/mini-runner": "^3.6.34",
+		"@tarojs/plugin-framework-react": "3.5.12",
+		"@tarojs/plugin-platform-alipay": "3.5.12",
+		"@tarojs/plugin-platform-jd": "3.5.12",
+		"@tarojs/plugin-platform-qq": "3.5.12",
+		"@tarojs/plugin-platform-swan": "3.5.12",
+		"@tarojs/plugin-platform-tt": "3.5.12",
+		"@tarojs/plugin-platform-weapp": "3.5.12",
+		"@tarojs/react": "3.5.12",
+		"@tarojs/router": "3.5.12",
+		"@tarojs/runtime": "3.5.12",
+		"@tarojs/shared": "3.5.12",
+		"@tarojs/taro": "3.5.12",
+		"@tarojs/taro-h5": "3.5.12",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"swr": "^2.2.5"
@@ -63,27 +60,18 @@
 	"devDependencies": {
 		"@babel/core": "^7.8.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-		"@tarojs/cli": "3.6.34",
-		"@tarojs/taro-loader": "3.6.34",
-		"@tarojs/test-utils-react": "^0.1.1",
-		"@tarojs/webpack5-runner": "3.6.34",
-		"@types/jest": "^29.3.1",
-		"@types/node": "^18.15.11",
+		"@tarojs/cli": "3.5.12",
+		"@tarojs/webpack5-runner": "3.5.12",
 		"@types/react": "^18.0.0",
 		"@types/webpack-env": "^1.13.6",
-		"babel-preset-taro": "3.6.34",
+		"babel-preset-taro": "3.5.12",
 		"eslint": "^8.12.0",
-		"eslint-config-taro": "3.6.34",
+		"eslint-config-taro": "3.5.12",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-react": "^7.8.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"jest": "^29.3.1",
-		"jest-environment-jsdom": "^29.5.0",
-		"postcss": "^8.4.18",
 		"react-refresh": "^0.11.0",
 		"stylelint": "^14.4.0",
-		"ts-node": "^10.9.1",
-		"webpack": "5.78.0",
-		"webpack-bundle-analyzer": "^4.10.2"
+		"webpack": "5.69.0"
 	}
 }
