Revert "fix: hotfix2"
This reverts commit 7e33fe97b62509912c0f29f318b525a47fe4f75a.

--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "miniprogramRoot": "dist/",
+  "miniprogramRoot": "./dist",
   "projectname": "EZR.FE.JdCrmMulti.Mini",
   "description": "京东企微scrm",
   "appid": "wx0540cca36c22cc9e",
